refactor: 에러 핸들링 리펙토리